--- a/linventif_vote/resource/localization/en/linv_vote.properties
+++ b/linventif_vote/resource/localization/en/linv_vote.properties
@@ -1,10 +1,35 @@
 
-linv_vote.thanks=Thank you for voting!
-linv_vote.thanks_info1=We thank you for your support.
-linv_vote.thanks_info2=You will soon receive {1} directly in your wallet.
+linv_vote.title=Linventif Vote
+linv_vote.thanks=Thank you for voting !
+linv_vote.thanks_info1=Thank you for your support.
+linv_vote.thanks_info2=You will soon receive {1} directly into your wallet.
 linv_vote.thanks_info3=You can vote every 2 hours.
 linv_vote.claim=Claim
 linv_vote.vote=VOTE
-linv_vote.linv_vote= Linventif Vote | 
-linv_vote.ply_vote={1} has supported the server by voting and has received {2}!
-linv_vote.reward_received=You received {1} for voting!
+linv_vote.linv_vote=Linventif Vote | 
+linv_vote.ply_vote={1} supported the server by voting and received {2}!
+linv_vote.reward_received=Thank you for supporting the server, you received {1}.
+linv_vote.already_vote=You have already voted recently!
+linv_vote.can_revote_in=You can re-vote at {1}h{2}!
+linv_vote.already_in_list=You are already in the waiting list.
+linv_vote.added_to_list=You have been added to the waiting list, you will receive your reward in a maximum of {1} minutes.
+linv_vote.linvvote=Linventif Vote
+linv_vote.reward_money=Reward in money
+linv_vote.url=Vote URL
+linv_vote.url_desc=URL of your server, on vote-serveur.
+linv_vote.token=Vote token
+linv_vote.token_desc=top-serveurs.net -> Your Servers -> Web API
+linv_vote.refresh_time=Refresh time
+linv_vote.cooldown=Cooldown between each vote
+linv_vote.cooldown_desc=Time in minutes
+linv_vote.commands=Vote commands
+linv_vote.reward_money_desc=Reward amount
+linv_vote.refresh_time_desc=Refresh time in seconds
+linv_vote.npc_model=NPC model
+linv_vote.npc_name=NPC name
+linv_vote.height=NPC height
+linv_vote.show_votes_panel=Display the vote panel
+linv_vote.remove_in_vehicle=Remove the panel in vehicle
+linv_vote.show_on_join=Display the panel on join
+linv_vote.show_votes=Display votes in chat
+linv_vote.npc_height=NPC height
