--- a/linventif_vote/resource/localization/fr/linv_vote.properties
+++ b/linventif_vote/resource/localization/fr/linv_vote.properties
@@ -5,6 +5,30 @@ linv_vote.thanks_info2=Vous allez bientôt recevoir {1} directement dans votre p
 linv_vote.thanks_info3=Vous pouvez voter toutes les 2 heures.
 linv_vote.claim=Récupérer
 linv_vote.vote=VOTEZ
-linv_vote.linv_vote= Linventif Vote | 
+linv_vote.linv_vote=Linventif Vote | 
 linv_vote.ply_vote={1} à soutenu le serveur en votant est a reçu {2} !
-linv_vote.reward_received=Vous avez reçu {1} pour avoir voté !
+linv_vote.reward_received=Merci de soutenir le serveur, vous avez recu {1}.
+linv_vote.already_vote=Vous avez déjà voté récemment !
+linv_vote.can_revote_in=Vous pourrez re-voter à {1}h{2} !
+linv_vote.already_in_list=Vous êtes déja dans la liste d'attente.
+linv_vote.added_to_list=Vous avez étais ajouté a la liste d'attente, vous recevrez votre récompense dans maximum {1} minutes.
+linv_vote.linvvote=Linventif Vote
+linv_vote.reward_money=Récompense en argent
+linv_vote.url=URL de vote
+linv_vote.url_desc=L'url vers votre server, sur vote-serveur.
+linv_vote.token=Token de vote
+linv_vote.token_desc=top-serveurs.net -> Your Servers -> Web API
+linv_vote.refresh_time=Temps de rafraichissement
+linv_vote.cooldown=Cooldown entre chaque vote
+linv_vote.cooldown_desc=temps en minutes
+linv_vote.commands=Commandes de vote
+linv_vote.reward_money_desc=Montant de la récompense
+linv_vote.refresh_time_desc=Temps de rafrechisement en seconde
+linv_vote.npc_model=Modèle du NPC
+linv_vote.npc_name=Nom du NPC
+linv_vote.height=Hauteur du NPC
+linv_vote.show_votes_panel=Afficher le panneau de vote
+linv_vote.remove_in_vehicle=Enlever le panneau en véhicule
+linv_vote.show_on_join=Afficher le panneau au join
+linv_vote.show_votes=Afficher les votes dans le chat
+linv_vote.npc_height=Hauteur du NPC
