--- a/linventif_vote/resource/localization/en/linv_vote.properties
+++ b/linventif_vote/resource/localization/en/linv_vote.properties
@@ -10,7 +10,7 @@ linv_vote.linv_vote=Linventif Vote |
 linv_vote.ply_vote={1} supported the server by voting and received {2}!
 linv_vote.reward_received=Thank you for supporting the server, you received {1}.
 linv_vote.already_vote=You have already voted recently!
-linv_vote.can_revote_in=You can re-vote at {1}h{2}!
+linv_vote.can_revote_in=You can re-vote in {1}h{2}!
 linv_vote.already_in_list=You are already in the waiting list.
 linv_vote.added_to_list=You have been added to the waiting list, you will receive your reward in a maximum of {1} minutes.
 linv_vote.linvvote=Linventif Vote
@@ -33,3 +33,5 @@ linv_vote.remove_in_vehicle=Remove the panel in vehicle
 linv_vote.show_on_join=Display the panel on join
 linv_vote.show_votes=Display votes in chat
 linv_vote.npc_height=NPC height
+linv_vote.panel_pos_w=Position X of the panel
+linv_vote.panel_pos_h=Position Y of the panel
