--- a/linventif_vote/resource/localization/es/linv_vote.properties
+++ b/linventif_vote/resource/localization/es/linv_vote.properties
@@ -33,3 +33,5 @@ linv_vote.remove_in_vehicle=Eliminar el panel en vehículo
 linv_vote.show_on_join=Mostrar
 linv_vote.show_votes=Mostrar votos en el chat
 linv_vote.npc_height=Altura de NPC
+linv_vote.panel_pos_w=Position X del panel
+linv_vote.panel_pos_h=Position Y del panel
