--- a/linventif_vote/resource/localization/fr/linv_vote.properties
+++ b/linventif_vote/resource/localization/fr/linv_vote.properties
@@ -9,7 +9,7 @@ linv_vote.linv_vote=Linventif Vote |
 linv_vote.ply_vote={1} à soutenu le serveur en votant est a reçu {2} !
 linv_vote.reward_received=Merci de soutenir le serveur, vous avez recu {1}.
 linv_vote.already_vote=Vous avez déjà voté récemment !
-linv_vote.can_revote_in=Vous pourrez re-voter à {1}h{2} !
+linv_vote.can_revote_in=Vous pourrez re-voter dans {1}h{2} !
 linv_vote.already_in_list=Vous êtes déja dans la liste d'attente.
 linv_vote.added_to_list=Vous avez étais ajouté a la liste d'attente, vous recevrez votre récompense dans maximum {1} minutes.
 linv_vote.linvvote=Linventif Vote
@@ -32,3 +32,5 @@ linv_vote.remove_in_vehicle=Enlever le panneau en véhicule
 linv_vote.show_on_join=Afficher le panneau au join
 linv_vote.show_votes=Afficher les votes dans le chat
 linv_vote.npc_height=Hauteur du NPC
+linv_vote.panel_pos_w=Position X du panel
+linv_vote.panel_pos_h=Position Y du panel
