--- a/linventif_vote/resource/localization/pt/linv_vote.properties
+++ b/linventif_vote/resource/localization/pt/linv_vote.properties
@@ -10,7 +10,7 @@ linv_vote.linv_vote=Linventif Vote |
 linv_vote.ply_vote={1} apoiou o servidor votando e recebeu {2}!
 linv_vote.reward_received=Obrigado por apoiar o servidor, você recebeu {1}.
 linv_vote.already_vote=Você já votou recentemente!
-linv_vote.can_revote_in=Você pode votar novamente às {1}h{2}!
+linv_vote.can_revote_in=Você pode votar novamente in {1}h{2}!
 linv_vote.already_in_list=Você já está na lista de espera.
 linv_vote.added_to_list=Você foi adicionado à lista de espera, você receberá sua recompensa em um máximo de {1} minutos.
 linv_vote.linvvote=Linventif Vote
@@ -33,3 +33,5 @@ linv_vote.remove_in_vehicle=Remover o painel no veículo
 linv_vote.show_on_join=Mostrar no login
 linv_vote.show_votes=Mostrar votos no chat
 linv_vote.npc_height=Altura de NPC
+linv_vote.panel_pos_w=Posição X do painel
+linv_vote.panel_pos_h=Posição Y do painel
